Simple markdown styling